# math-trend

./: .gitignore  HONESTY_DECLARATION.md  LICENSE  PATENT_DATA_SOURCES.md  README.md  actionable_report_generator.py  analyze_608_with_noise_labeling.py  bert_semantic_encoder.py  bert_topic_model.py  causal_inference.py  citation_network.py  cross_domain_transfer_advanced.py  crossref_citation_api.py  deep_learning_forecast.py  demo_cement_storage.py  demo_cement_storage_advanced.py  demo_cross_domain_transfer.py  demo_real_data_analysis.py  dynamic_network.py  external_data_crawler.py  generate_full_report.py  journal_ranking_advanced.py  math_trend_advanced_cli.py  multi_source_search.py  multilingual_support.py  pyproject.toml  time_series_analysis.py  unified_data_loader.py
analysis/: base.py
analysis/advanced/: citation_network.py  cross_field_comparison.py  time_series.py  topic_modeling.py
analysis/basic/: cross_domain.py  journal_ranking.py  statistics.py
cli/: main.py
core/: config.py  data_model.py  interfaces.py  pipeline.py
data/: cache.py  collector.py  quality.py
math_trend/: __init__.py
math_trend/dynamics/: cross_domain_transfer.py
reporting/: renderer.py
